--- a/details.html
+++ b/details.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="stylesheets/details.css">
     <title>Details</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/668d372fa7.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <img src="./capstone.PNG" alt="">
+
     
 </body>
 </html>
