backroung image added

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <div class="center-content">
                 <h3 class="picture__title uppercase">MAPAAN your gateway to your favourite events in Cameroon</h3>
                 <div class="fieldset">
-                    <p class="fieldset__text">search by keyword</p>
+                    <p class="fieldset__text uppercase">search by keyword</p>
                     <form class="header-form" action="get">
                         <input type="text" placeholder="Enter a keyword, Ex: concert ">
-                        <a class="search-btn" href="result.html">search</a>
+                        <a class="search-btn uppercase" href="result.html">search</a>
                     </form>
                 </div>
-                <a class="how-btn" href="works">how it works</a>
-            </div>
+                <a class="how-btn uppercase" href="works">how it works</a>
+            </div> 
         </div>
     </header>
 
