mobile navbar fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/main.css">
     <title>MAPAAN</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://kit.fontawesome.com/99ec583b17.js" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
@@ -17,27 +18,27 @@
     <header>
         <nav class="navbar-mobile">
             <div class="nav-part1">
-                <span class="nav__location-icon"><i class="fa fa-facebook-square fa-lg"></i></span>
+                <span class="nav__location-icon"><i class="fas fa-street-view fa-2x"></i></span>
                 <span class="nav__logo bold">MAPAAN</span>
             </div>
 
             <div class="nav-part2">
-                <span class="uppercase"><i class="fa fa-facebook-square fa-lg"></i></i></span>
-                <span class="uppercase"><i class="fa fa-facebook-square fa-lg"></i></i></span>
-                <span class="uppercase"><i class="fa fa-facebook-square fa-lg"></i></span>
+                <span class="uppercase"><i class="fa fa-search-location fa-lg"></i></span>
+                <span class="uppercase"><i class="fas fa-rss fa-lg"></i></span>
+                <span class="uppercase"><i class="fas fa-bars fa-lg"></i></span>
             </div>
         </nav>
 
         <nav class="navbar-desktop">
             <div class="left-nav">
-                <span class="nav__location-icon"><i class="fa fa-facebook-square fa-lg"></i></span>
+                <span class="nav__location-icon"><i class="fas fa-street-view fa-2x"></i></span>
                 <span class="nav__logo">MAPAAN</span>
             </div>
 
             <div class="right-nav">
-                <span class="uppercase"><i class="fa fa-facebook-square fa-lg"></i>comming soon</span>
-                <span class="uppercase"><i class="fa fa-facebook-square fa-lg"></i>blog</span>
-                <span class="uppercase"><i class="fa fa-facebook-square fa-lg"></i>More</span>
+                <span class="uppercase"><i class="fa fa-search-location fa-lg"></i>comming soon</span>
+                <span class="uppercase"><i class="fas fa-rss fa-lg"></i>blog</span>
+                <span class="uppercase"><i class="fas fa-database fa-lg"></i>More</span>
             </div>
         </nav>
 
@@ -128,7 +129,7 @@
             <span><a href="#">search</a></span>
             <span><a href="#">about us</a></span>
             <span><a href="#">advertise</a></span>
-            <span class="icon__main"><a href="#"><i class="fa fa-facebook-square fa-lg"></i></a></span>
+            <span class="icon__main"><a href="#"><i class="fas fa-street-view fa-4x"></i></a></span>
             <span><a href="#">facebook</a></span>
             <span><a href="#">twitter</a></span>
             <span><a href="#">blog</a></span>
