footer links ajusted

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <div class="contact">
                 <h4 class="uppercase bold">contact</h4>
-                <h5 class="normal">want to suggest or ask a question?</h5>
+                <h5 class="normal">want to suggest or add an event?</h5>
                 <small class="orange">ericmbouwe@yahoo.fr</small>
             </div>
 
