result page search field added

--- a/details.html
+++ b/details.html
@@ -18,7 +18,8 @@
             </div>
 
             <div class="nav-part2">
-                <span class="uppercase"><i class="fa fa-search-location fa-lg"></i></span><span  class="uppercase d-none"><a href="result.html">comming soon</a></span>
+                <span class="uppercase"><a href="result.html"><i class="fa fa-search-location fa-lg"></i></a></span><span
+                class="uppercase d-none"><a href="result.html">comming soon</a></span>
                 <span class="uppercase"><i class="fas fa-rss fa-lg"></i></span><span  class="uppercase d-none">blog</span>
                 <span class="uppercase"><i class="fas fa-bars fa-lg"></i></span><span  class="uppercase d-none">more</span>
             </div>
@@ -48,7 +49,7 @@
             <div class="subscribe">
                 <h4 class="uppercase bold">subscribe</h4>
                 <form class="footer-form" action="post">
-                    <input type="text" placeholder="you@example.com">
+                    <input type="email" placeholder="you@example.com">
                     <a href="#">send</a>
                 </form>
             </div>
