--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             </div>
 
             <div class="nav-part2">
-                <span class="uppercase"><i class="fa fa-search-location fa-lg"></i></span><span
-                    class="uppercase d-none"><a href="result.html">comming soon</a></span>
+                <span class="uppercase"><a href="result.html"><i
+                            class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
+                        href="result.html">comming soon</a></span>
                 <span class="uppercase"><i class="fas fa-rss fa-lg"></i></span><span
                     class="uppercase d-none">blog</span>
                 <span class="uppercase"><i class="fas fa-bars fa-lg"></i></span><span
@@ -30,7 +31,8 @@
 
         <div class="picture">
             <div class="center-content">
-                <h3 class="picture__title uppercase">MAPAAN your gateway to your favourite events in Cameroon</h3>
+                <h3 class="picture__title uppercase normal"><span class="orange bold">MAPAAN </span>the access to your
+                    favourite events in Cameroon.</h3>
                 <div class="fieldset">
                     <form class="header-form" action="get">
                         <label class="fieldset__text uppercase">search by keyword</label>
@@ -137,7 +139,7 @@
             <div class="subscribe">
                 <h4 class="uppercase bold">subscribe</h4>
                 <form class="footer-form" action="post">
-                    <input type="text" placeholder="you@example.com">
+                    <input type="email" placeholder="you@example.com">
                     <a href="#">send</a>
                 </form>
             </div>
