paadint added on selection options inputs

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </div>
                 <a class="how-btn uppercase" href="#works">how it works</a>
             </div>
+            <a class="gradient" href="#"></a>
         </div>
     </header>
 
@@ -70,7 +71,7 @@
                 <div class="three">
                     <span><i class="fas fa-thumbtack fa-2x"></i></span>
                     <p class="three__title uppercase bold">3-pin it</p>
-                    <p class="three__text">Pin your events into your account's repository and set a reminder to never
+                    <p class="three__text">Pin your events into your account's calendar and set a reminder to never
                         miss your selected events.</p>
                 </div>
                 <div class="four">
