--- a/details.html
+++ b/details.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,16 +19,36 @@
             </div>
 
             <div class="nav-part2">
-                <span class="uppercase"><a href="result.html"><i class="fa fa-search-location fa-lg"></i></a></span><span
-                class="uppercase d-none"><a href="result.html">comming soon</a></span>
-                <span class="uppercase"><i class="fas fa-rss fa-lg"></i></span><span  class="uppercase d-none">blog</span>
-                <span class="uppercase"><i class="fas fa-bars fa-lg"></i></span><span  class="uppercase d-none">more</span>
+                <span class="uppercase"><a href="result.html"><i
+                            class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
+                        href="result.html">comming soon</a></span>
+                <span class="uppercase"><i class="fas fa-rss fa-lg"></i></span><span
+                    class="uppercase d-none">blog</span>
+                <span class="uppercase"><i class="fas fa-bars fa-lg"></i></span><span
+                    class="uppercase d-none">more</span>
             </div>
         </nav>
     </header>
 
     <main>
+        <p>Samuel Eto’o organise un grand concert avec ses amis artistes le 20 décembre 2019 au Parc des princes de
+            Douala. Pour y avoir accès il faut jouer sur son site de Paris sportifs, Betoo.cm.
+            C’est-à-dire que la promotion du site web de Samuel Eto’o c’est la magie. Après avoir ouvert les 04
+            premières agences de Betoo à Douala, Eto’o organise un grand concert de musique urbaine. Il a annoncé ce
+            grand évènement sur sa page Instagram: « On a pas dit que “Eto’o Peut”? Le 20 décembre 2019 je serai présent
+            à Douala pour mon premier concert accompagné de quelques amis. » a-t-il écrit.
 
+
+
+            Les conditions d’accès au concert surprenne quand même. Pour obtenir un ticket, il faut parier sur Betoo.
+            Comme il a expliqué: « Tu veux voir pour croire? Rendez-vous donc le 20 décembre au parc des princes pour
+            assister au premier concert où tu obtiens une place gratuite en tentant de gagner des millions!!! Comme
+            Eto’o Parie sur betoo.cm.« . Imaginez le nombre de paris qu’il y aura sur le site jusqu’au 20 décembre.
+
+            Les stars qui vont alors prester sont versées. En tête d’affiche on a Kerozen, Diamond Platnumz, Magasco,
+            Salatiel, Tzy Panchak, Benash. Comme autres stars il y aura Kola sucré, Kameni, Iza, Nernos, Sojip… etc.
+            Bref une très grande scène avec le Ngambè en plus. Façon il aime le micro et les concerts on va surement le
+            voir sur le podium en vrai.</p>
     </main>
 
     <footer>
@@ -84,4 +105,5 @@
         </div>
     </footer>
 </body>
+
 </html>
