margins removed on navbar icons

--- a/details.html
+++ b/details.html
@@ -47,8 +47,8 @@
         </div>
 
         <div class="map">
-            <h3 class="uppercase orange">map geolocalization</h3>
-            <img src="" alt="map">
+            <h3 class="uppercase orange">map geolocation</h3>
+            <img src="https://img-0.journaldunet.com/TUIoMZoSVMCDMXl0WUNfotBBS8U=/1280x/smart/2b7b473c1ebe416ead81f3f6179a1d75/ccmcms-jdn/11436203.jpg" alt="map">
         </div>
     </main>
 
