--- a/result.html
+++ b/result.html
@@ -35,12 +35,12 @@
             <h3 class="filter-text capitalize">filter by date, city and category</h3>
             <div class="filter-field">
                 <div class="date">
-                    <label for="" class="block uppercase bold">date</label>
+                    <label class="block uppercase bold">date</label>
                     <input type="date" name="event-date">
                 </div>
 
                 <div class="category">
-                    <label for="" class="block uppercase bold">category</label>
+                    <label class="block uppercase bold">category</label>
                     <select class="category-options capitalize" name="day">
                         <option value="sport" selected>sport</option>
                         <option value="danse">culture</option>
@@ -51,8 +51,8 @@
                 </div>
 
                 <div class="city">
-                    <label for="" class="block uppercase bold">city</label>
-                    <select class="city-options capitalize name=" day">
+                    <label class="block uppercase bold">city</label>
+                    <select class="city-options capitalize">
                         <option value="Friday" selected>douala</option>
                         <option value="Saturday">yaounde</option>
                         <option value="Sunday">buea</option>
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="buttons">
-                    <a class="srch-btn block" href="#" name="submit" value="Send">search</a>
+                    <a class="srch-btn block" href="#">search</a>
                     <a class="clr-btn block" href="#">clear filter</a>
                 </div>
             </div>
