--- a/result.html
+++ b/result.html
@@ -22,10 +22,10 @@
                 <span class="uppercase"><a href="result.html"><i
                             class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
                         href="result.html">comming soon</a></span>
-                <span class="uppercase"><i class="fas fa-rss fa-lg"></i></span><span
-                    class="uppercase d-none">blog</span>
-                <span class="uppercase"><i class="fas fa-bars fa-lg"></i></span><span
-                    class="uppercase d-none">more</span>
+                <span class="uppercase"><a href="details-template.html"><i class="fas fa-rss fa-lg"></i></a></span><span
+                    class="uppercase d-none"><a href="details-template.html">blog</a></span>
+                <span class="uppercase"><a href="details-template.html"><i class="fas fa-bars fa-lg"></i></a></span><span
+                    class="uppercase d-none"><a href="details-template.html">more</a></span>
             </div>
         </nav>
     </header>
