sticklers errors fixed

--- a/details-template.html
+++ b/details-template.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/main.css">
-    <link rel="stylesheet" href="details-template.css">
+    <link rel="stylesheet" href="stylesheets/details-template.css">
+    <script src="https://kit.fontawesome.com/99ec583b17.js" crossorigin="anonymous"></script>
     <title>Template</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
             <div class="nav-part2">
                 <span class="uppercase"><a href="result.html"><i
                             class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
-                        href="result.html">comming soon</a></span>
+                        href="result.html">coming soon</a></span>
                 <span class="uppercase"><a href="details-template.html"><i class="fas fa-rss fa-lg"></i></a></span><span
                     class="uppercase d-none"><a href="details-template.html">blog</a></span>
                 <span class="uppercase"><a href="details-template.html"><i class="fas fa-bars fa-lg"></i></a></span><span
@@ -29,9 +30,8 @@
 
     <main>
         <div class="oups">
-            <h1>Oups...!</h1>
             <img src="https://previews.123rf.com/images/arcady31/arcady311102/arcady31110200028/8885322-oups-ic%C3%B4ne.jpg" alt="oups">
-            <p>Sorry this page is not available now</p>
+            <p class="bold m-1 p-1">Sorry this page is not available now</p>
             <a class="capitalize home-btn" href="index.html">go home</a>
         </div>
     </main>
@@ -62,7 +62,7 @@
 
             <div class="contact">
                 <h4 class="uppercase bold">contact</h4>
-                <h5 class="normal">want to suggest or ask a question?</h5>
+                <h5 class="normal">want to suggest or add an event?</h5>
                 <small class="orange">ericmbouwe@yahoo.fr</small>
             </div>
 
