--- a/details.html
+++ b/details.html
@@ -21,11 +21,12 @@
             <div class="nav-part2">
                 <span class="uppercase"><a href="result.html"><i
                             class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
-                        href="result.html">comming soon</a></span>
+                        href="result.html">coming soon</a></span>
                 <span class="uppercase"><a href="details-template.html"><i class="fas fa-rss fa-lg"></i></a></span><span
                     class="uppercase d-none"><a href="details-template.html">blog</a></span>
-                <span class="uppercase"><a href="details-template.html"><i class="fas fa-bars fa-lg"></i></a></span><span
-                    class="uppercase d-none"><a href="details-template.html">more</a></span>
+                <span class="uppercase"><a href="details-template.html"><i
+                            class="fas fa-bars fa-lg"></i></a></span><span class="uppercase d-none"><a
+                        href="details-template.html">more</a></span>
             </div>
         </nav>
     </header>
@@ -48,7 +49,8 @@
 
         <div class="map">
             <h3 class="uppercase orange">map geolocation</h3>
-            <img src="https://img-0.journaldunet.com/TUIoMZoSVMCDMXl0WUNfotBBS8U=/1280x/smart/2b7b473c1ebe416ead81f3f6179a1d75/ccmcms-jdn/11436203.jpg" alt="map">
+            <img src="https://img-0.journaldunet.com/TUIoMZoSVMCDMXl0WUNfotBBS8U=/1280x/smart/2b7b473c1ebe416ead81f3f6179a1d75/ccmcms-jdn/11436203.jpg"
+                alt="map">
         </div>
     </main>
 
@@ -78,7 +80,7 @@
 
             <div class="contact">
                 <h4 class="uppercase bold">contact</h4>
-                <h5 class="normal">want to suggest or ask a question?</h5>
+                <h5 class="normal">want to suggest or add an event?</h5>
                 <small class="orange">ericmbouwe@yahoo.fr</small>
             </div>
 
