--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="nav-part2">
                 <span class="uppercase"><a href="result.html"><i
                             class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
-                        href="result.html">comming soon</a></span>
+                        href="result.html">coming soon</a></span>
                 <span class="uppercase"><a href="details-template.html"><i class="fas fa-rss fa-lg"></i></a></span><span
                     class="uppercase d-none"><a href="details-template.html">blog</a></span>
                 <span class="uppercase"><a href="details-template.html"><i class="fas fa-bars fa-lg"></i></a></span><span
@@ -56,7 +56,7 @@
                 <div class="one">
                     <span><i class="fab fa-searchengin fa-2x"></i></span>
                     <p class="one__title uppercase bold">1-search</p>
-                    <p class="one__text">all you have to do is to enter a keyword to have the result related to your
+                    <p class="one__text">All you have to do is to enter a keyword to have the result related to your
                         search everywhere in the country</p>
                 </div>
                 <div class="two">
@@ -100,8 +100,8 @@
 
             <article class="ads">
                 <div class="text">
-                    <h4 class="ads__title">changez vous les idees et profitez</h4>
-                    <h6>profiter du meilleur evenement pour votre plaisir</h6>
+                    <h4 class="ads__title">change your ideas and enjoy</h4>
+                    <h6>enjoy the best event for your pleasure</h6>
                     <a class="ads-btn" href="result.html">the place to be</a>
                 </div>
 
@@ -116,7 +116,7 @@
                         alt=""></a>
                 <div class="text">
                     <h4 class="app-ads__title">Anywhere and anytime</h4>
-                    <h6>The best way to be aware of our most wanted events and to never miss them</h6>
+                    <h6>The best way to be aware of your most wanted events and to never miss them</h6>
                 </div>
             </article>
         </section>
