--- a/result.html
+++ b/result.html
@@ -21,7 +21,7 @@
             <div class="nav-part2">
                 <span class="uppercase"><a href="result.html"><i
                             class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
-                        href="result.html">comming soon</a></span>
+                        href="result.html">coming soon</a></span>
                 <span class="uppercase"><a href="details-template.html"><i class="fas fa-rss fa-lg"></i></a></span><span
                     class="uppercase d-none"><a href="details-template.html">blog</a></span>
                 <span class="uppercase"><a href="details-template.html"><i class="fas fa-bars fa-lg"></i></a></span><span
@@ -35,23 +35,23 @@
             <h3 class="filter-text capitalize">filter by date, city and category</h3>
             <div class="filter-field">
                 <div class="date">
-                    <label class="block uppercase bold">date</label>
+                    <label class="block uppercase bold">date <b>*</b></label>
                     <input type="date" name="event-date">
                 </div>
 
                 <div class="category">
-                    <label class="block uppercase bold">category</label>
+                    <label class="block uppercase bold">category <b>*</b></label>
                     <select class="category-options capitalize" name="day">
                         <option value="sport" selected>sport</option>
                         <option value="danse">culture</option>
                         <option value="movies">cinema</option>
-                        <option value="danse">theater</option>
+                        <option value="danse">tech</option>
                         <option value="danse">conference</option>
                     </select>
                 </div>
 
                 <div class="city">
-                    <label class="block uppercase bold">city</label>
+                    <label class="block uppercase bold">city <b>*</b></label>
                     <select class="city-options capitalize">
                         <option value="Friday" selected>douala</option>
                         <option value="Saturday">yaounde</option>
@@ -152,7 +152,7 @@
 
             <div class="contact">
                 <h4 class="uppercase bold">contact</h4>
-                <h5 class="normal">want to suggest or ask a question?</h5>
+                <h5 class="normal">want to suggest or add an event?</h5>
                 <small class="orange">ericmbouwe@yahoo.fr</small>
             </div>
 
