default template page styled

--- a/details-template.html
+++ b/details-template.html
@@ -31,7 +31,7 @@
     <main>
         <div class="oups">
             <img src="https://previews.123rf.com/images/arcady31/arcady311102/arcady31110200028/8885322-oups-ic%C3%B4ne.jpg" alt="oups">
-            <p class="bold m-1 p-1">Sorry this page is not available now</p>
+            <h2 class="bold m-1 p-1">Sorry this page is not available now</h2>
             <a class="capitalize home-btn" href="index.html">go home</a>
         </div>
     </main>
