default option added on results search inputs

--- a/result.html
+++ b/result.html
@@ -36,13 +36,13 @@
             <form class="filter-field">
                 <div class="date">
                     <label class="block uppercase bold">date *</label>
-                    <input type="date" name="event-date">
+                    <input type="date" lang="en" />
                 </div>
 
                 <div class="category">
                     <label class="block uppercase bold">category *</label>
                     <select class="category-options capitalize" name="day">
-                        <option value="sport" selected></option>
+                        <option disabled selected value> -- select an option -- </option>
                         <option value="Friday">sport</option>
                         <option value="danse">culture</option>
                         <option value="movies">cinema</option>
@@ -54,7 +54,7 @@
                 <div class="city">
                     <label class="block uppercase bold">city *</label>
                     <select class="city-options capitalize">
-                        <option value="Friday" selected></option>
+                        <option disabled selected value> -- select an option -- </option>
                         <option value="Friday">douala</option>
                         <option value="Saturday">yaounde</option>
                         <option value="Sunday">buea</option>
